add: add lists in footer

--- a/app/components/Footer.module.css
+++ b/app/components/Footer.module.css
@@ -1,15 +1,13 @@
-.footer {
-  grid-row-start: 3;
+.footer ul {
+  list-style: none;
   display: flex;
-  gap: 24px;
+  /* align-items: center; */
+  justify-content: center;
 }
 
-.footer a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
+.footer li {
+  padding: 12px;
 }
-
 
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
