--- a/app/components/Header.module.css
+++ b/app/components/Header.module.css
@@ -1,4 +1,12 @@
 .header {
+  width: 100%;
+  border-bottom: solid 1px white;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.header ul {
   padding-left:0;
   color: white;
   display: flex;
@@ -15,13 +23,5 @@
   .header a:hover {
     text-decoration: underline;
     text-underline-offset: 4px;
-  }
-}
-
-@media (max-width: 600px) {
-  .header {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
   }
 }
